--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,19 @@
-absl-py==2.3.1
-annotated-types==0.7.0
-anyio==4.10.0
-astunparse==1.6.3
-certifi==2025.8.3
-charset-normalizer==3.4.3
-click==8.2.1
-colorama==0.4.6
-exceptiongroup==1.3.0
-flatbuffers==25.2.10
-gast==0.6.0
-google-pasta==0.2.0
-grpcio==1.74.0
-h11==0.16.0
-h5py==3.14.0
-idna==3.10
-joblib==1.5.1
-keras==3.11.3
-libclang==18.1.1
-Markdown==3.8.2
-markdown-it-py==4.0.0
-MarkupSafe==3.0.2
-mdurl==0.1.2
-ml_dtypes==0.5.3
-namex==0.1.0
-numpy==2.2.6
-opt_einsum==3.4.0
-optree==0.17.0
-packaging==25.0
-pandas==2.3.2
-pillow==11.3.0
-protobuf==6.32.0
-pydantic==2.11.7
-pydantic_core==2.33.2
-Pygments==2.19.2
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
-pytz==2025.2
-requests==2.32.5
-rich==14.1.0
-scikit-learn==1.7.1
-scipy==1.15.3
-six==1.17.0
-sniffio==1.3.1
-starlette==0.47.3
-tensorboard==2.20.0
-tensorboard-data-server==0.7.2
-termcolor==3.1.0
-threadpoolctl==3.6.0
-typing-inspection==0.4.1
-typing_extensions==4.15.0
-tzdata==2025.2
-urllib3==2.5.0
-uvicorn==0.35.0
-Werkzeug==3.1.3
-wrapt==1.17.3
-xgboost==3.0.4
-catboost==1.2.8
-google-generativeai==0.8.5
-pyodbc==5.2.0
-matplotlib==3.10.5
-seaborn==0.13.2
+pandas>=2.2
+numpy>=1.26
+matplotlib>=3.8
+seaborn>=0.13
+scikit-learn>=1.4
+xgboost>=2.0
+catboost>=1.2
+tensorflow-cpu>=2.16
+joblib>=1.3
+
+fastapi>=0.110
+uvicorn>=0.29
+python-dotenv>=1.0
+pyodbc>=5.1
+google-generativeai>=0.7
+
+starlette>=0.36
+protobuf>=4.25
+h5py>=3.10
